--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,11 +1,9 @@
-.shop-container {
+.twin-container{
     display: flex;
 }
-
-.product-container {
+.product-container{
     width: 70%;
     margin-left: 20px;
     margin-right: 5px;
-    padding: 4px;
     border-right: 1px solid lightgray;
 }
